--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Shoppre</string>
     <string name="helper_text"><![CDATA[Use 8 or more characters with a mix of letters, numbers & symbols]]></string>
-    <string name="by_signing_"><![CDATA[By signing up, you agree to Shoppre\'s Terms of Use & Privacy Policy]]></string>
+    <string name="by_signing_">By signing up, you agree to Shoppre\'s <u>Terms of Use</u> &amp; <u>Privacy Policy</u></string>
     <string name="create_your_account_string">Create Your Account</string>
     <string name="full_name_string">Full Name</string>
     <string name="email_id_string">Email Id</string>
@@ -21,7 +21,7 @@ Worry not! We’ve got your back.\nEnter your registered email address and we’
     <string name="new_password_string">New Password</string>
     <string name="confirm_new_password_string">Confirm New Password</string>
     <string name="reset_password_string">Reset Password</string>
-    <string name="alreay_have"><font color="#000000">Already have an account?</font><font color="#2D8DFF"> Login</font></string>
+    <string name="alreay_have"><font color="#000000">Already have an account?</font><font color="#2D8DFF">Login</font></string>
     <string name="dont_have"><font color="#000000">Don\'t have an account?</font><font color="#2D8DFF"> Sign Up Now</font></string>
     <string name="password_error_string">Looks like the Email ID and Password you entered are incorrect. Please try again!</string>
     <!-- TODO: Remove or change this placeholder text -->
@@ -40,6 +40,8 @@ Worry not! We’ve got your back.\nEnter your registered email address and we’
     <string name="facebook_app_id">651881328327888</string>
     <string name="fb_login_protocol_scheme">fb651881328327888</string>
     <string name="Loading">Loading...</string>
+    <string name="enter_your_phone_number_to_get_regular_alerts">Enter your phone number to get regular alerts</string>
+    <string name="password_error_message"><![CDATA[A password with 8 or more characters with a mix of letters, numbers & symbols is required]]></string>
 
 
 </resources>
