--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,8 @@ Worry not! We’ve got your back.\nEnter your registered email address and we’
     <string name="facebook_app_id">651881328327888</string>
     <string name="fb_login_protocol_scheme">fb651881328327888</string>
     <string name="Loading">Loading...</string>
+    <string name="edit"><u>Edit</u></string>
+    <string name="delete"><u>Delete</u></string>
 
 
 </resources>
