--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="by_signing_">By signing up, you agree to Shoppre\'s <u>Terms of Use</u> &amp; <u>Privacy Policy</u></string>
     <string name="create_your_account_string">Create Your Account</string>
     <string name="full_name_string">Full Name</string>
-    <string name="email_id_string">Email Id</string>
+    <string name="email_id_string">Email ID</string>
     <string name="password_string">Password</string>
     <string name="confirm_password_string">Confirm Password</string>
 
@@ -21,7 +21,7 @@ Worry not! We’ve got your back.\nEnter your registered email address and we’
     <string name="new_password_string">New Password</string>
     <string name="confirm_new_password_string">Confirm New Password</string>
     <string name="reset_password_string">Reset Password</string>
-    <string name="alreay_have"><font color="#000000">Already have an account?</font><font color="#2D8DFF">Login</font></string>
+    <string name="alreay_have"><font color="#000000">Already have an account?</font><font color="#2D8DFF"> Login</font></string>
     <string name="dont_have"><font color="#000000">Don\'t have an account?</font><font color="#2D8DFF"> Sign Up Now</font></string>
     <string name="password_error_string">Looks like the Email ID and Password you entered are incorrect. Please try again!</string>
     <!-- TODO: Remove or change this placeholder text -->
