--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@ Worry not! We’ve got your back.\nEnter your registered email address and we’
     <string name="shop_from_1000_indian_websites_get_it_delivered_to_your_virtual_address">Shop from 1000+ Indian Websites &amp; get it delivered to your Virtual Address</string>
     <string name="we_ll_consolidate_ship_it_to_you">We\'ll consolidate &amp; ship it to you!</string>
     <string name="unlock_your_unique_virtual_address">Unlock your unique Virtual Address</string>
-    <string name="use_this_address_to_shop_from_india">Use this address to shop from India</string>
+    <string name="use_this_address_to_shop_from_india">Use this address\nto shop from India</string>
     <string name="your_indian_virtual_address">Your Indian Virtual Address</string>
     <string name="locker_no_sa_29j17_122545_indian_shoppre_llp_182_1st_floor_2nd_cross_rd_7th_main_koramangala_1st_block_bengaluru_karnataka_560_034">Indian Shoppre LLP,<br />#182, 1st Floor, 2nd Cross Rd,<br />7th Main, Koramangala 1st Block,<br />Bengaluru, Karnataka - 560 034</string>
 
@@ -49,7 +49,7 @@ Worry not! We’ve got your back.\nEnter your registered email address and we’
     <string name="help_amp_faqs"><![CDATA[Help & FAQs]]></string>
     <string name="contact_us">Contact Us</string>
     <string name="wallet_transaction">Wallet Transaction</string>
-    <string name="share_the_unique">Share the unique code and invite your friends to ship with Shoppre and earn a cashback of Rs 350 when their first package dispatches.They get Rs. 350 too!</string>
+    <string name="share_the_unique">Share the unique code and invite your friends to ship with Shoppre and earn a cashback of Rs 350 when their first package dispatches. They get Rs. 350 too!</string>
     <string name="you_have_not">You have not invited anybody yet. Share the referral with you friends and start earning now!</string>
     <string name="can_i_transfer_the_cashback_to_my_bank">Can I Transfer the Cashback to My Bank?</string>
     <string name="how_can_i_invite_my_friends">How Can I Invite My Friends?</string>
