--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,6 +67,7 @@ Worry not! We’ve got your back.\nEnter your registered email address and we’
     <string name="edit"><u>Edit</u></string>
     <string name="varify_your_account_details">We’ve sent an email with the verification link\nto your ID which is valid for 7 days only.\nPlease verify your account to access all the\nfeatures.</string>
     <string name="delivery_address">24 Airport Rd -<br />Garhoud - Dubai -<br />United Arab Emirates</string>
+    <string name="update_address">Update Address</string>
 
     <!--    <string name="password_error_message"><![CDATA[A Password 8 or more characters with a mix of letters, numbers & symbols is required]]></string>-->
 
