--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,10 @@ Worry not! We’ve got your back.\nEnter your registered email address and we’
     <string name="_1_of_the_packages">1 of the packages selected does not have an invoice.<br></br>It is mandatory to attach invoice for all shipments as per customs regulations.</string>
     <string name="shipping_preference">Shipping Preference</string>
     <string name="get_vip_treatment"><![CDATA[Get VIP treatment by pushing your packages ahead in the shipment queue. Faster Consolidation, Special Requests & Out the Door quickly!]]></string>
+    <string name="ship_request_summary">Ship Request Summary</string>
+    <string name="airport_rd">Airport Rd - Garhoud - Dubai - United Arab Emirates</string>
+    <string name="change"><u>Change</u></string>
+    <string name="add"><u>Add</u></string>
 
     <!--    <string name="password_error_message"><![CDATA[A Password 8 or more characters with a mix of letters, numbers & symbols is required]]></string>-->
 
