--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,7 +95,7 @@ Worry not! We’ve got your back.\nEnter your registered email address and we’
     <string name="your_shipment_request">Your shipment request is in queue. We’ll notify you once your packages are ready to be shipped.</string>
     <string name="we_ll_share_the">We’ll share the payment link once your packages\n are ready to be shipped.\n\n Please make the payment within 7 days of recieving the link.\n There will be a storage fee of INR 100/day after the 7th day.</string>
     <string name="the_shipment_cannot">The shipment cannot be processed without invoices for all the packages. Please upload the invoice to avoid any delays in shipment. You can cancel your order within one hour of creating shipment.</string>
-    <string name="we_re_processing_">We’re processing your shipment request.\nYou will recieve the payment link shortly.</string>
+    <string name="we_re_processing_">We’re processing your shipment request.\nYou will receive the payment link shortly.</string>
     <string name="please_make_the_payment">Please make the payment within 7 days of initiation after which there’ll be a charge of ₹ 100/day. The charges will be added to the wallet.</string>
     <string name="orders_more_than_15">Orders more than 15 items per website will incur an additional service fees of INR 50 per item</string>
     <string name="exchange_toast">We’re reviewing your Exchange Request</string>
@@ -103,6 +103,8 @@ Worry not! We’ve got your back.\nEnter your registered email address and we’
     <string name="split_toast">We’re reviewing your Split Package Request</string>
     <string name="discard_toast">We’re reviewing your Discard Request</string>
     <string name="photo_toast">We’re reviewing your Additional Photo Request</string>
+    <string name="your_package_contains_damaged_items">- Your package contains<font color="#FF0000"><b> damaged</b></font> items</string>
+    <string name="your_package_contains">- Your package contains<font color="#FF0000"><b> restricted</b></font> items, which\ncan be shipped<b> only within India</b>. Deselect the\npackage to ship internationally.</string>
 
     <!--    <string name="password_error_message"><![CDATA[A Password 8 or more characters with a mix of letters, numbers & symbols is required]]></string>-->
 
