--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">Shoppre</string>
     <string name="helper_text"><![CDATA[Use 8 or more characters with a mix of letters, numbers & symbols]]></string>
-    <string name="by_signing_">By signing up, you agree to Shoppre\'s <u>Terms of Use</u> &amp; <u>Privacy Policy</u></string>
+    <string name="by_signing_">By signing up, you agree to Shoppre\'s</string>
+    <string name="terms"><u> Terms of Use</u> &amp; </string>
+    <string name="privacy"><u>Privacy Policy</u></string>
     <string name="create_your_account_string">Create Your Account</string>
     <string name="email_id_string">Email ID</string>
     <string name="confirm_password_string">Confirm Password</string>
